# EnsemblePerturbation

./: .editorconfig  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  environment.yml  perturb_adcirc.py  pyproject.toml  setup.cfg  setup.py
.github/actions/setup-proj/: action.yml
.github/workflows/: build.yml  quick_test.yml  tests.yml
EnsemblePerturbation/: perturb_adcirc.py  read_output.py
assets/: cmocean.cm.amp.npy  cmocean.cm.diff_r.npy
docs/source/: abstract.rst  acknowledgements.rst  client.rst  comparison.rst  conf.py  index.rst  introduction.rst  parsing.rst  perturbation.rst  references.bib
ensemble_perturbation/: __init__.py  parse_output.py  perturb_adcirc.py  plotting.py  utilities.py
ensemble_perturbation/configuration/: adcirc.py  job_script.py
ensemble_perturbation/configuration/seabed/: ngdc.py  seabed.py
ensemble_perturbation/inputs/: adcirc.py  perturb_adcirc.py  slurm.job
ensemble_perturbation/inputs/seabed/: ngdc.py  seabed.py
ensemble_perturbation/outputs/: comparison.py  parse_output.py  parse_stations.py
ensemble_perturbation/parsing/: adcirc.py  comparison.py  utilities.py
ensembleperturbation/: plotting.py  utilities.py
ensembleperturbation/client/: combine_results.py  make_storm_ensemble.py  perturb_tracks.py  plot_results.py
ensembleperturbation/outputs/: comparison.py
ensembleperturbation/parsing/: adcirc.py  comparison.py  schism.py  utilities.py
ensembleperturbation/perturbation/: atcf.py  make_storm_ensemble.py
ensembleperturbation/plotting/: __init__.py  gdal_dataset.py  geometry.py  map.py  nodes.py  perturbation.py  surrogate.py  taylor_diagram.py  utilities.py
ensembleperturbation/tropicalcyclone/: atcf.py
ensembleperturbation/uncertainty_quantification/: ensemble_array.py  karhunen_loeve_expansion.py  polynomial_chaos.py  quadrature.py  surrogate.py
examples/: compare_uv.py  compare_zeta.py  expand_distribution.py  karhunenloeve_polynomialchaos.py  parse_besttrack_ensemble_results.py  parse_polynomial_chaos.py  parse_quadrature_into_polynomial_chaos.py  parse_stations.py  perturb_adcirc.py  run_jobs.py
examples/adcirc/: ensemble_results_parser.py  perturb_mannings_n.py  perturb_tides.py  perturb_tracks.py  perturb_tracks_hera.py  perturb_tracks_orion.py  perturb_wind.py  run_jobs.py  single_hsofs_run.py  single_shinnecock_run.py
examples/adcirc/hera/: single_run_hsofs_irma_hera.py  single_run_hsofs_sandy_hera.py  single_run_shinnecock_ike_hera.py
examples/adcirc/stampede2/: single_run_hsofs_sandy_stampede2.py  single_run_shinnecock_ike_stampede2.py
examples/compare/: reference.py  reference_uv.py  reference_zeta.py  virtual.py  virtual_uv.py  virtual_zeta.py
examples/karhunenloeve_polynomialchaos/: klpc_inundation_extrapolation.py  klpc_wetonly.py
examples/klpc_surrogate/: read_hdf.py  readme.txt  run_kl.py  run_klpc.py  run_pc.py
examples/klpc_surrogate/old_scripts/: run_kl.py
tests/: __init__.py  test_advisory_ensemble.py  test_base.py  test_besttrack_ensemble.py  test_comparison.py  test_forecast_track_ensemble.py  test_parser.py  test_perturb.py  test_seabed.py  test_track_ensemble.py  test_utilities.py  test_vortex_types.py
tests/data/Shinnecock_Inlet_NetCDF_output/: fort.64.nc
tests/data/input/test_existing_advisory/: florence_advisory.22  florence_advisory_persistentRMW.22
tests/data/input/test_parse_adcirc_output/: fort.15
tests/data/reference/test_assemble_adcirc_output/: vel_max.h5  zeta_max.h5
tests/data/reference/test_besttrack_ensemble/: along_track_1.22  along_track_2.22  along_track_3.22  cross_track_1.22  cross_track_2.22  cross_track_3.22  max_sustained_wind_speed_1.0_gaussian.22  max_sustained_wind_speed_1.22  max_sustained_wind_speed_2.22  max_sustained_wind_speed_3.22  original.22  radius_of_maximum_winds_0.75_linear.22  radius_of_maximum_winds_1.22  radius_of_maximum_winds_2.22  radius_of_maximum_winds_3.22
tests/data/reference/test_combine_outputs/: fort.63.nc  fort.64.nc  maxele.63.nc  maxvel.63.nc  outputs.h5  perturbations.nc
tests/data/reference/test_existing_advisory/: original.22  original.json  vortex_4_variable_korobov_1.22  vortex_4_variable_korobov_1.json  vortex_4_variable_korobov_2.22  vortex_4_variable_korobov_2.json  vortex_4_variable_korobov_3.22  vortex_4_variable_korobov_3.json  vortex_4_variable_korobov_4.22  vortex_4_variable_korobov_4.json  vortex_4_variable_korobov_5.22  vortex_4_variable_korobov_6.22  vortex_4_variable_korobov_6.json  vortex_4_variable_korobov_7.22  vortex_4_variable_korobov_7.json  vortex_4_variable_korobov_8.22  vortex_4_variable_korobov_8.json  vortex_4_variable_korobov_9.22  vortex_4_variable_korobov_9.json
tests/data/reference/test_monovariate_besttrack_ensemble/: original.22  original.json  vortex_1_variable_perturbation_1.22  vortex_1_variable_perturbation_1.json  vortex_1_variable_perturbation_2.22  vortex_1_variable_perturbation_2.json  vortex_1_variable_perturbation_3.22  vortex_1_variable_perturbation_3.json  vortex_1_variable_perturbation_4.22  vortex_1_variable_perturbation_4.json  vortex_1_variable_perturbation_5.22  vortex_1_variable_perturbation_5.json  vortex_1_variable_perturbation_6.22  vortex_1_variable_perturbation_6.json  vortex_1_variable_perturbation_7.22  vortex_1_variable_perturbation_7.json  vortex_1_variable_perturbation_8.22  vortex_1_variable_perturbation_8.json  vortex_1_variable_random_1.22  vortex_1_variable_random_1.json  vortex_1_variable_random_2.22  vortex_1_variable_random_2.json  vortex_1_variable_random_3.22  vortex_1_variable_random_3.json  vortex_1_variable_random_4.22  vortex_1_variable_random_4.json  vortex_1_variable_random_5.22  vortex_1_variable_random_6.22  vortex_1_variable_random_6.json  vortex_1_variable_random_7.22  vortex_1_variable_random_7.json  vortex_1_variable_random_8.22
tests/data/reference/test_multivariate_besttrack_ensemble/: original.22  original.json  vortex_3_variable_perturbation_1.22  vortex_3_variable_perturbation_1.json  vortex_3_variable_perturbation_2.22  vortex_3_variable_perturbation_2.json  (+15 more)
(+67 files in other folders)
