[tool.poetry]
name = 'ensembleperturbation'
version = '0.0.0'
description = 'perturbation of coupled model input over a space of input variables'
authors = ['Zach Burnett <zachary.burnett@noaa.gov>']
license = 'CC0-1.0'
readme = 'README.md'
repository = 'https://github.com/noaa-ocs-modeling/EnsemblePerturbation.git'
documentation = 'https://ensembleperturbation.readthedocs.io'

[build-system]
requires = [
    'poetry-core>=1.0.0',
    'poetry-dynamic-versioning',
]
build-backend = 'poetry.core.masonry.api'

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = '^3.7'
adcircpy = '>=1.1.0'
appdirs = '*'
beautifulsoup4 = '*'
cartopy = { version = '*', optional = true }
chaospy = '*'
cmocean = { version = '*', optional = true }
coupledmodeldriver = '>=1.4.11'
dask = '*'
fiona = '*'
geopandas = '*'
netcdf4 = '*'
matplotlib = { version = '*', optional = true }
numpy = '*'
pandas = '*'
pint-pandas = '*'
pyproj = '>=2.6'
tables = '*'
typepigeon = '*'
python-dateutil = '*'
requests = '*'
shapely = '*'
scikit-learn = '*'
stormevents = '*'
isort = { version = '*', optional = true }
oitnb = { version = '*', optional = true }
pytest = { version = '*', optional = true }
pytest-cov = { version = '*', optional = true }
pytest-xdist = { version = '*', optional = true }
wget = { version = '*', optional = true }
m2r2 = { version = '*', optional = true }
sphinx = { version = '*', optional = true }
sphinx-rtd-theme = { version = '*', optional = true }
sphinxcontrib-bibtex = { version = '*', optional = true }
sphinxcontrib-programoutput = { version = '*', optional = true }

[tool.poetry.extras]
plotting = ['cartopy', 'cmocean', 'matplotlib']
testing = ['pytest', 'pytest-cov', 'pytest-socket', 'pytest-xdist', 'wget']
development = ['isort', 'oitnb']
documentation = ['m2r2', 'sphinx', 'sphinx-rtd-theme', 'sphinxcontrib-programoutput', 'sphinxcontrib-bibtex']

[tool.poetry.scripts]
initialize_adcirc = 'coupledmodeldriver.client.initialize_adcirc:main'
generate_adcirc = 'coupledmodeldriver.client.generate_adcirc:main'
check_completion = 'coupledmodeldriver.client.check_completion:main'
unqueued_runs = 'coupledmodeldriver.client.unqueued_runs:main'
