[metadata]
name = ensembleperturbation
author = Zach Burnett
author_email = zachary.burnett@noaa.gov
description = perturbation of coupled model input over a space of input variables
long_description = file: README.md
license = CC0
url = https://github.com/noaa-ocs-modeling/EnsemblePerturbation.git

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/**.py
