[metadata]
name = ensembleperturbation
author = Zach Burnett <zachary.burnett@noaa.gov>
description = perturbation of coupled model input over a space of input variables
long_description = file:README.md
long_description_content_type = text/markdown
license = CC0
python_requires = >=3.7
url = https://github.com/noaa-ocs-modeling/EnsemblePerturbation.git

[options]
install_requires =
    adcircpy >= 1.1.0
    appdirs
    cartopy
    chaospy
    cmocean
    bs4
    coupledmodeldriver >= 1.4.11
    dask
    fiona
    geopandas
    matplotlib
    netcdf4
    numpy
    pandas
    pint-pandas
    pyproj >= 2.6
    tables
    typepigeon
    python-dateutil
    requests
    shapely
    scikit-learn
    stormevents >= 1.3.1

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-xdist
    wget
development =
    flake8
    isort
    oitnb
documentation =
    dunamai
    m2r2
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-programoutput

[options.entry_points]
console_scripts =
    make_storm_ensemble=ensembleperturbation.client.make_storm_ensemble:main
    perturb_tracks=ensembleperturbation.client.perturb_tracks:main
    combine_results=ensembleperturbation.client.combine_results:main
    plot_results=ensembleperturbation.client.plot_results:main
